# FastAPI-Tutorial

./: app.py  frontend.py  main.py  pyproject.toml
model/: predict.py
schema/: user_input.py
